--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FetchRewards</string>
+    <string name="error_message">Sorry, Please try later</string>
 </resources>
