--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">FetchRewards</string>
     <string name="error_message">Sorry, Please try later</string>
+    <string name="item_name_table_header">Item Name</string>
+    <string name="id_table_header">ID</string>
 </resources>
